Add test for isPegoutTx from a P2WSH-P2SH federation